Fix a possible crash when emitting requestClose() twice from the module (This can happen due a bug in the widgets-on-list framework, (used by the KWin Effects page), which duplicates the KeyEvent under certain situations)

BUG: 189381

svn path=/trunk/KDE/kdebase/workspace/; revision=952427